// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "dataLoaded": false,
    "dataSaving": false,
    "errors": Array [],
    "project": Object {},
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li></li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`renders correctly 2`] = `
Object {
  "Options": Object {
    "dataLoaded": true,
    "dataSaving": false,
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"/\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Edit</li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Update</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`update fail 1`] = `
Object {
  "Options": Object {
    "dataLoaded": true,
    "dataSaving": false,
    "errors": Array [
      "Update project fail!",
    ],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"/\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Edit</li>
 </ul>
 <!--0-->
 <!--0-->
 <ul class=\\"errors-panel\\">
   <li>Update project fail!</li>
 </ul>
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Update</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;
